--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -49,6 +49,16 @@
                         android:layout_marginBottom="12dp"
                         android:layout_gravity="center"/>
 
+                    <ImageView
+                        android:id="@+id/ivUserProfile"
+                        android:layout_width="96dp"
+                        android:layout_height="96dp"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="16dp"
+                        android:contentDescription="@string/app_name"
+                        app:srcCompat="@drawable/user_profile"
+                        app:tint="@color/orange"/>
+
                     <!-- Username -->
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
@@ -152,6 +162,7 @@
 
                     <!-- NIC (read-only) -->
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/tlNic"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="NIC"
@@ -173,6 +184,7 @@
 
                     <!-- Phone -->
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/tlPhone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Phone"
